service-mesh/istio-1.0-vm/dsav/grpc-app/grpc-app-deploy.yaml
# this file for deployment dsav-account
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grpc-app
  labels:
    app: grpc-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grpc-app
    spec:
      containers:
      - name: grpc-app
        image: tnindo/grpctest:v1
        ports:
        - containerPort: 8000
        - containerPort: 1212
        imagePullPolicy: IfNotPresent
        # volumeMounts:
        # - mountPath: /go/src/account/logs
        #   name: account-logs
      restartPolicy: Always
      # volumes:
      # - name: account-logs
      #   hostPath:
      #     path: /data/digital_saving_account/logs 
      imagePullSecrets:
      - name: regsecret
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-app
  labels:
    app: grpc-app
spec:
  ports:
  -  port: 8000
     targetPort: 8000
    #  nodePort: 30212
     name: http-grpc-app
  - port: 1212
    targetPort: 1212
    # nodePort: 30222
    name: grpc-grpc-app
  # type: LoadBalancer
  selector:
    app: grpc-app
