service-mesh/istio-1.0-vm/dsav/grpc-app/grpc-app2-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-app2-vs
spec:
  hosts:
  - grpc-app2
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: grpc-app2
        port:
          number: 1212
    fault:
      abort:
        percent: 50
        httpStatus: 505
